--- a/jinja.html
+++ b/jinja.html
@@ -86,7 +86,7 @@
     </main>
 
     <!-- Application Script -->
-    <script src="./jinja/script.js"></script>
+    <script src="./jinja/app.js"></script>
     
     <!-- Screen Reader Only Styles -->
     <style>
